--- a/03-datatypes.html
+++ b/03-datatypes.html
@@ -43,6 +43,11 @@
       // Symbol
       let e = Symbol();
       let f = Symbol();
+
+      // typeof operator
+      console.log(typeof 'Ankita') 
+      console.log(typeof 12345) 
+      console.log(typeof true) 
     </script>
   </body>
 </html>
