exponential notation & empty values

--- a/03-datatypes.html
+++ b/03-datatypes.html
@@ -45,9 +45,16 @@
       let f = Symbol();
 
       // typeof operator
-      console.log(typeof 'Ankita') 
-      console.log(typeof 12345) 
-      console.log(typeof true) 
+      console.log(typeof "Ankita");
+      console.log(typeof 12345);
+      console.log(typeof true);
+
+      // Exponential notation
+      let w = 123e5; //12300000
+      let r = 123e-5; //0.00123
+
+      // Empty Values
+      let food = ""; //The value is "", the typeof is 'String'
     </script>
   </body>
 </html>
